header icon gap fix

--- a/src/components/components.css
+++ b/src/components/components.css
@@ -48,7 +48,7 @@
 .desktop {
     display: flex;
     align-items: center;
-    width: 30%;
+    width: 20%;
     justify-content: space-around;
 }
 
@@ -78,6 +78,12 @@
 
 .toggle .line3 {
     transform: rotate(45deg) translate(-5px, -6px);
+}
+
+@media only screen and (max-width: 1200px) {
+    .desktop {
+        width: 30%;
+    }
 }
 
 @media only screen and (max-width: 1024px) {
